# MIRACLE

./: .gitattributes  .gitignore  Dockerfile  README.md  all_patterns.jsonl  crontab  docker-compose.local.yml  docker-compose.yml  labels.txt  prodigy.json  prompt.txt  pyproject.toml  requirements.txt  spacy-llm-config.cfg  start.sh
data/: curation_md.jsonl
data/dailymed/: curation_md_eval.jsonl
data/model_annotations/: annotations_curation_md__gpt3.jsonl  annotations_neuro_dkg__gpt3.jsonl  annotations_neuro_dkg__gpt3_trained.jsonl
data/neuro_dkg/: labels_neuro_dkg_adapted.txt  neuro_dkg.csv  neuro_dkg_adapted.csv
datas/dailymed/: curation_md.jsonl  curation_md_train.jsonl
datas/model_annotations/: annotations_neuro_dkg__miracle.jsonl
datas/neuro_dkg/: neuro_dkg.jsonl
notebooks/: rxnorm.ipynb
results/dataset_analysis/: curation_gpt3_train_analysis.csv  curation_md_train_analysis.csv  neuro_dkg_analysis.csv
results/model_perf_analysis/: curation_gpt3_eval__gpt3_trained_analysis.csv  curation_md__gpt3_analysis.csv  curation_md__gpt3_trained_analysis.csv  curation_md_eval__miracle_analysis.csv  (+3 more)
scripts/: analyse.sh  backup.sh  build.sh  compare_neuro_dkg.sh  deploy.sh  download.sh  start.sh
src/: analyse.py  augment.py  compare_neuro_dkg.py  convert_neuro_dkg.py  create_drug_patterns.py  csv2jsonl.py  diff.py  drugbank_parser.py  extract_neuro_dkg.py  jsonl2csv.py  jsonl2yml.py  llm_prompt.py  pattern_creator.py  process_dailymed_indications.py  process_dm_indications.py  process_drugbank.py  process_mondo.py  scorer.py  select.py  split.py
(+22 files in other folders)
